--- a/Site Data/config.toml
+++ b/Site Data/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://voiceart.ist/"
+baseurl = "https://voiceartist.github.io/"
 languageCode = "en-us"
 title = "Dan Long | Voice Artist"
 theme = "stellar"
